@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-21T08:10:40Z",
-  "count_outdated" : 484,
-  "uniques_outdated" : 313,
-  "count" : 485,
-  "uniques" : 314,
+  "timestamp" : "2024-04-24T16:13:51Z",
+  "count_outdated" : 485,
+  "uniques_outdated" : 314,
+  "count" : 488,
+  "uniques" : 315,
   "clones" : [
     {
-      "timestamp": "2024-02-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "timestamp": "2024-04-24T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
